--- a/index.html
+++ b/index.html
@@ -33,9 +33,48 @@
 
     <main>
 
-      <h1>About</h1>
+      <div class="container">
 
-      <p></p>
+        <h1>About</h1>
+
+        <p>This is the first annual Cloud Computing Conference at Lehman College. The conference series will feature keynote talks, special
+          sessions, poster presentation, tutorials, workshops, and contributed papers.</p>
+
+        <p>The goal of the conference is to be a premier venue for researchers and industry practitioners to share new ideas, research results
+          and development experiences in various fields. This will be one of a kind in the Bronx.</p>
+
+        <p>Cloud computing is the delivery of on-demand computing services, from applications to storage and processing power. Cloud computing
+          relies on sharing of resources to achieve coherence and economies of scale. Advocates of public and hybrid clouds note that cloud
+          computing allows companies to avoid or minimize up-front IT infrastructure costs. Proponents also claim that cloud computing allows
+          enterprises to get their applications up and running faster, with improved manageability and less maintenance, and that it enables
+          IT teams to more rapidly adjust resources to meet fluctuating and unpredictable demand, providing the burst computing capability:
+          high computing power at certain periods of peak demand.</p>
+
+        <ul class="ul-with-squares">
+          <li>Talks by industry experts on the state-of-the-art in cloud computing</li>
+          <li>Lectures by eminent scientists designed to inspire and inform</li>
+          <li>Presentations by innovative researchers coming from across the world</li>
+          <li>Discussion-oriented sessions and networking breaks to enable collaborations</li>
+        </ul>
+
+        <div class="keynoteSpeakers">
+
+        <h2>Keynote Speakers</h2>
+
+        <div class="speaker1">
+
+          <h3>Speaker 1</h3>
+          <div class="profile-pic"><img src="images/profile-pic.jpg"></div>
+          <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+          </div>
+
+        </div>
+
+      </div>
+
+
 
     </main>
 
