--- a/registration.html
+++ b/registration.html
@@ -39,25 +39,25 @@
 
           <h2>User Registration</h2>
 
-          <form class="" action="index.html" method="post">
+          <form action="index.html" id="myForm">
 
             <div class="fields">
-              <label for="">Full Name:</label>
+              <label>Full Name:</label>
               <input type="text" name="" value="">
             </div>
 
             <div class="fields">
-              <label for="">E-mail:</label>
+              <label>E-mail:</label>
               <input type="text" name="" value="">
             </div>
 
             <div class="fields">
-              <label for="">Password</label>
-              <input type="text" name="" value="">
+              <label>Password</label>
+              <input type="text" name="" id="passWord">
             </div>
 
             <div class="fields">
-              <label for="">Confirm Password</label>
+              <label>Confirm Password</label>
               <input type="text" name="" value="">
             </div>
 
